--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "normalize.css": "^7.0.0"
+  }
 }
