--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "dev": "webpack-dev-server",
-    "prod": "webpack -p"
+    "prod": "webpack -p",
+    "deploy": "push-dir --dir=dist --branch=gh-pages"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -13,6 +14,7 @@
     "eslint-plugin-import": "^2.7.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "push-dir": "^0.4.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0"
   },
