--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -11,6 +11,7 @@ devDependencies:
   eslint-plugin-import: 2.7.0
   file-loader: 0.11.2
   html-webpack-plugin: 2.30.1
+  push-dir: 0.4.1
   style-loader: 0.18.2
   webpack: 3.4.1
 packages:
@@ -3131,6 +3132,12 @@ packages:
     dev: true
     resolution:
       integrity: sha1-wNWmOycYgArY4esPpSachN1BhF4=
+  /push-dir/0.4.1:
+    dependencies:
+      minimist: 1.2.0
+    dev: true
+    resolution:
+      integrity: sha1-KUgerNnCEGu7eUHbbTfRIqBx7LQ=
   /q/1.5.0:
     dev: true
     resolution:
@@ -4105,6 +4112,7 @@ specifiers:
   file-loader: ^0.11.2
   html-webpack-plugin: ^2.29.0
   normalize.css: ^7.0.0
+  push-dir: ^0.4.1
   style-loader: ^0.18.2
   webpack: ^3.3.0
   webpack-dev-server: ^2.6.1
